--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
-        "admin-lte": "3.1.0",
-        "axios": "^0.27",
-        "bootstrap": "^4.6.0",
-        "jquery": "^3.6",
-        "laravel-vite-plugin": "^0.6.0",
+        "@popperjs/core": "^2.10.2",
+        "axios": "^0.21",
+        "bootstrap": "^5.1.3",
+        "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0",
-        "vite": "^3.0.0"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "jquery": "^3.6"
+    },
+    "dependencies": {
+        "admin-lte": "^3.2.0",
+        "datatables.net-bs4": "^1.12.1",
+        "datatables.net-buttons-bs4": "^2.2.3",
+        "datatables.net-searchpanes-bs4": "^2.0.2",
+        "datatables.net-select-bs4": "^1.4.0",
+        "popper.js": "^1.16.1"
     }
 }
